[gd_scene load_steps=43 format=3 uid="uid://cfdpexhwuwrmg"]

[ext_resource type="Script" uid="uid://fcvv8w6oypa6" path="res://src/Scripts/third_person_player.gd" id="1_b61l5"]
[ext_resource type="PackedScene" uid="uid://cmrs264a1r0m6" path="res://src/Scenes/orbit_camera.tscn" id="2_oy5sk"]
[ext_resource type="Script" uid="uid://c40ah4l5mu65d" path="res://src/Scripts/PlayerStates/player_state_machine.gd" id="3_uwxpf"]
[ext_resource type="Script" uid="uid://xk4arqqxnv8c" path="res://src/Scripts/PlayerStates/player_grounded.gd" id="4_tsc3g"]
[ext_resource type="Script" uid="uid://bct3m2olqchtq" path="res://src/Scripts/PlayerStates/player_focused.gd" id="5_syjl4"]
[ext_resource type="Script" uid="uid://0ytxwobfs56q" path="res://src/Scripts/PlayerStates/player_aerial.gd" id="5_t3wav"]
[ext_resource type="Script" uid="uid://bw7k3m2v2lly7" path="res://src/Scripts/PlayerStates/player_pushing.gd" id="7_gc466"]
[ext_resource type="PackedScene" uid="uid://baug8fq0okhe3" path="res://src/Scenes/wolf_traveller_2.tscn" id="8_itdtg"]
[ext_resource type="Texture2D" uid="uid://bs5wiigrn3e47" path="res://assets/Materials/Textures/crosshair.png" id="9_5lae5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7q8u8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oc30e"]
animation = &"root|JumpPose"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2b1a1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wh5sn"]
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hlgrf"]
states/root|JumpPose/node = SubResource("AnimationNodeAnimation_oc30e")
states/root|JumpPose/position = Vector2(527, 100)
transitions = ["Start", "root|JumpPose", SubResource("AnimationNodeStateMachineTransition_2b1a1"), "root|JumpPose", "End", SubResource("AnimationNodeStateMachineTransition_wh5sn")]
graph_offset = Vector2(-9, -21)

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_5lae5"]
filter_enabled = true
filters = ["", "root/Skeleton3D/WolfTraveller:Blink", "root/Skeleton3D/WolfTraveller:Talk", "root/Skeleton3D:Hips", "root/Skeleton3D:LeftFoot", "root/Skeleton3D:LeftLowerLeg", "root/Skeleton3D:LeftLowerLeg_twist_01", "root/Skeleton3D:LeftToes", "root/Skeleton3D:LeftUpperLeg", "root/Skeleton3D:LeftUpperLeg_twist_01", "root/Skeleton3D:RightFoot", "root/Skeleton3D:RightLowerLeg", "root/Skeleton3D:RightLowerLeg_twist_01", "root/Skeleton3D:RightToes", "root/Skeleton3D:RightUpperLeg", "root/Skeleton3D:RightUpperLeg_twist_01", "root/Skeleton3D:c_tail_00", "root/Skeleton3D:c_tail_01"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fqbe7"]
animation = &"root|PushPose"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4skry"]
animation = &"root|BaseWalk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_jr6dl"]
graph_offset = Vector2(20.6206, -6.72031)
nodes/Add2/node = SubResource("AnimationNodeAdd2_5lae5")
nodes/Add2/position = Vector2(520, 80)
nodes/Animation/node = SubResource("AnimationNodeAnimation_4skry")
nodes/Animation/position = Vector2(280, 240)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_fqbe7")
"nodes/Animation 2/position" = Vector2(280, 60)
nodes/output/position = Vector2(680, 80)
node_connections = [&"Add2", 0, &"Animation 2", &"Add2", 1, &"Animation", &"output", 0, &"Add2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2b1a1"]
animation = &"root|Gauntlet Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1jiyc"]
animation = &"root|Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cq7h2"]
animation = &"root|Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vja2a"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j4vu5"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w1dsd"]
advance_mode = 2
advance_condition = &"aerial"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uudeu"]
advance_mode = 2
advance_condition = &"aerial"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q8ofr"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"idling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4skry"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jr6dl"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"idling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wayh5"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hlgrf"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wsyoa"]
advance_mode = 2
advance_condition = &"aerial"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1jiyc"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"pushing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cq7h2"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"idling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qrdg7"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"pushing"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0tswy"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k03jg"]
states/Pushing/node = SubResource("AnimationNodeBlendTree_jr6dl")
states/Pushing/position = Vector2(718, 220)
states/Start/position = Vector2(181, 100)
"states/root|Gauntlet Walk/node" = SubResource("AnimationNodeAnimation_2b1a1")
"states/root|Gauntlet Walk/position" = Vector2(451, 251)
states/root|Idle/node = SubResource("AnimationNodeAnimation_1jiyc")
states/root|Idle/position = Vector2(347, 100)
states/root|Run/node = SubResource("AnimationNodeAnimation_cq7h2")
states/root|Run/position = Vector2(460, 1)
transitions = ["Start", "root|Idle", SubResource("AnimationNodeStateMachineTransition_vja2a"), "root|Idle", "root|Run", SubResource("AnimationNodeStateMachineTransition_j4vu5"), "root|Run", "End", SubResource("AnimationNodeStateMachineTransition_w1dsd"), "root|Idle", "End", SubResource("AnimationNodeStateMachineTransition_uudeu"), "root|Run", "root|Idle", SubResource("AnimationNodeStateMachineTransition_q8ofr"), "root|Idle", "root|Gauntlet Walk", SubResource("AnimationNodeStateMachineTransition_4skry"), "root|Gauntlet Walk", "root|Idle", SubResource("AnimationNodeStateMachineTransition_jr6dl"), "root|Gauntlet Walk", "root|Run", SubResource("AnimationNodeStateMachineTransition_wayh5"), "root|Run", "root|Gauntlet Walk", SubResource("AnimationNodeStateMachineTransition_hlgrf"), "root|Gauntlet Walk", "End", SubResource("AnimationNodeStateMachineTransition_wsyoa"), "root|Idle", "Pushing", SubResource("AnimationNodeStateMachineTransition_1jiyc"), "Pushing", "root|Idle", SubResource("AnimationNodeStateMachineTransition_cq7h2"), "root|Run", "Pushing", SubResource("AnimationNodeStateMachineTransition_qrdg7"), "Pushing", "root|Run", SubResource("AnimationNodeStateMachineTransition_0tswy")]
graph_offset = Vector2(-7, 23)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5lae5"]
animation = &"root|Fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7f8b"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3vnkr"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"aerial"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oc30e"]
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fqbe7"]
xfade_time = 0.2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_55yu1"]
states/Aerial/node = SubResource("AnimationNodeStateMachine_hlgrf")
states/Aerial/position = Vector2(719, 100)
states/End/position = Vector2(1094, 100)
states/Grounded/node = SubResource("AnimationNodeStateMachine_k03jg")
states/Grounded/position = Vector2(502, 100)
states/Start/position = Vector2(253, 100)
states/root|Fall/node = SubResource("AnimationNodeAnimation_5lae5")
states/root|Fall/position = Vector2(619, 171)
transitions = ["Start", "Grounded", SubResource("AnimationNodeStateMachineTransition_j7f8b"), "Grounded", "Aerial", SubResource("AnimationNodeStateMachineTransition_3vnkr"), "Aerial", "root|Fall", SubResource("AnimationNodeStateMachineTransition_oc30e"), "root|Fall", "Grounded", SubResource("AnimationNodeStateMachineTransition_fqbe7")]
graph_offset = Vector2(127, -14)

[node name="ThirdPersonPlayer" type="CharacterBody3D" node_paths=PackedStringArray("camera", "hook_origin", "anim_tree")]
collision_layer = 128
collision_mask = 113
script = ExtResource("1_b61l5")
camera = NodePath("OrbitCamera")
hook_origin = NodePath("Graphics/WolfTraveller/root/Skeleton3D/BoneAttachment3D")
anim_tree = NodePath("AnimationTree")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7q8u8")

[node name="PushableRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2)
collision_mask = 16
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="Graphics" type="Node3D" parent="."]

[node name="WolfTraveller" parent="Graphics" instance=ExtResource("8_itdtg")]
transform = Transform3D(-1.85, 0, -1.61732e-07, 0, 1.85, 0, 1.61732e-07, 0, -1.85, 1.45519e-11, -1, 1.45519e-11)

[node name="Skeleton3D" parent="Graphics/WolfTraveller/root" index="0"]
bones/1/position = Vector3(-2.50618e-11, 0.00379498, 1.01734e-05)
bones/1/rotation = Quaternion(0.000314931, 0.0135822, 0.00669693, 0.999885)
bones/2/rotation = Quaternion(0.700419, 0.0640261, 0.710823, 0.00663948)
bones/3/rotation = Quaternion(-7.10481e-08, -6.18721e-08, 0.196508, 0.980502)
bones/4/rotation = Quaternion(0.604633, 0.234686, -0.415096, 0.637995)
bones/5/rotation = Quaternion(0.0189043, 0.999551, 0.0226868, 0.00517316)
bones/6/rotation = Quaternion(-1.02634e-07, -0.418089, -1.24304e-07, 0.908406)
bones/7/rotation = Quaternion(6.44754e-10, -0.207553, -2.37303e-07, 0.978224)
bones/8/rotation = Quaternion(0.737537, -0.0808725, -0.669671, 0.0322403)
bones/9/rotation = Quaternion(2.08085e-08, 3.39295e-09, -0.243939, 0.969791)
bones/10/rotation = Quaternion(-0.572929, 0.270047, -0.450161, -0.62943)
bones/11/rotation = Quaternion(-0.0191085, 0.997576, 0.0667729, -0.00433334)
bones/12/rotation = Quaternion(-1.78132e-07, 0.365167, 7.47299e-08, 0.930942)
bones/13/rotation = Quaternion(6.77063e-10, 0.158235, -3.19327e-09, 0.987402)
bones/14/position = Vector3(1.68266e-10, 0.000806044, 2.43365e-05)
bones/14/rotation = Quaternion(0.0554465, 3.45097e-06, -1.91678e-07, 0.998462)
bones/15/position = Vector3(4.84223e-05, 0.000681583, -0.000257723)
bones/15/rotation = Quaternion(-0.00660016, -1.34452e-09, 1.60603e-09, 0.999978)
bones/16/position = Vector3(-5.20616e-05, 0.000743148, 0.000469302)
bones/16/rotation = Quaternion(-0.140474, 1.42898e-14, 2.02745e-15, 0.990084)
bones/17/position = Vector3(3.02149e-12, 0.000803724, -2.02799e-10)
bones/17/rotation = Quaternion(0.106958, -0.0209436, -0.00489638, 0.994031)
bones/18/rotation = Quaternion(-0.0300456, 0.000120168, -3.65755e-06, 0.999549)
bones/19/position = Vector3(-0.000459527, 0.000266417, -0.000118671)
bones/19/rotation = Quaternion(-0.479097, 0.440077, 0.522097, 0.551555)
bones/20/rotation = Quaternion(-0.553903, -0.254253, -0.085758, 0.788157)
bones/21/rotation = Quaternion(1.20305e-07, 6.01404e-09, 0.415707, 0.909499)
bones/22/rotation = Quaternion(0.0986922, -0.137739, 0.00795425, 0.985507)
bones/23/rotation = Quaternion(-0.126747, -0.656605, 0.236856, 0.704773)
bones/24/rotation = Quaternion(-0.142544, -0.021387, -0.0556564, 0.987991)
bones/26/position = Vector3(-0.000214325, 0.000502337, -2.44687e-05)
bones/26/rotation = Quaternion(0.0122505, -0.0405832, -0.0250062, 0.998788)
bones/27/rotation = Quaternion(-0.0966549, 0.0510887, 0.0409683, 0.993161)
bones/28/rotation = Quaternion(-0.29593, 0.157345, -0.269514, 0.90279)
bones/29/position = Vector3(-2.9853e-05, 0.000113965, -4.95216e-06)
bones/30/rotation = Quaternion(0.0258986, 0.895142, -0.00359083, -0.445014)
bones/31/rotation = Quaternion(-0.14667, 0.00249123, -0.0371634, 0.988484)
bones/32/rotation = Quaternion(-0.424562, 0.00261745, -0.00514834, 0.90538)
bones/33/rotation = Quaternion(-2.42876e-08, -0.137863, 1.0003e-07, 0.990451)
bones/34/rotation = Quaternion(6.01278e-09, 0.238835, 2.03113e-08, 0.97106)
bones/35/position = Vector3(0.000267876, 0.000212498, -6.37043e-05)
bones/35/rotation = Quaternion(-0.463238, -0.460448, -0.509397, 0.560279)
bones/36/rotation = Quaternion(-0.492145, 0.366726, 0.0385906, 0.788553)
bones/37/rotation = Quaternion(9.6236e-08, 4.40642e-08, -0.432218, 0.901769)
bones/38/rotation = Quaternion(0.0532824, -0.119004, -0.0435968, 0.990504)
bones/39/rotation = Quaternion(0.0353983, 0.613955, -0.232322, 0.753547)
bones/43/rotation = Quaternion(-0.0749452, -0.00730213, 0.0548798, 0.99565)
bones/44/rotation = Quaternion(-0.292791, 0.0071471, 0.109201, 0.949894)
bones/47/rotation = Quaternion(-0.205444, 0.00996478, 0.00957456, 0.978571)
bones/48/rotation = Quaternion(-0.295718, 0.030675, -0.0371462, 0.95406)
bones/49/rotation = Quaternion(2.18181e-08, -0.116924, -1.43873e-07, 0.993141)
bones/50/rotation = Quaternion(4.51149e-08, -0.357805, -1.68568e-08, 0.933796)
bones/51/rotation = Quaternion(-0.738987, 0.0153309, 0.0168324, 0.673334)
bones/52/rotation = Quaternion(0.456992, -0.0122429, 0.0191917, 0.88918)

[node name="BoneAttachment3D" parent="Graphics/WolfTraveller/root/Skeleton3D" index="1"]
transform = Transform3D(-0.573392, -0.284258, -0.768387, 0.780287, -0.475374, -0.406412, -0.249745, -0.832596, 0.494379, -0.00164076, -0.000205319, 0.00367494)

[node name="OrbitCamera" parent="." instance=ExtResource("2_oy5sk")]

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Graphics/WolfTraveller")
tree_root = SubResource("AnimationNodeStateMachine_55yu1")
anim_player = NodePath("../Graphics/WolfTraveller/AnimationPlayer")
parameters/conditions/aerial = false
parameters/conditions/grounded = false
parameters/Aerial/conditions/grounded = false
parameters/Grounded/conditions/aerial = false
parameters/Grounded/conditions/idling = false
parameters/Grounded/conditions/pushing = false
parameters/Grounded/conditions/running = false
parameters/Grounded/conditions/walking = false
parameters/Grounded/Pushing/Add2/add_amount = 1.0

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_5lae5")
stretch_mode = 3

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("3_uwxpf")
metadata/_custom_type_script = "uid://dn0quhgyu2alb"

[node name="PlayerGrounded" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_tsc3g")
metadata/_custom_type_script = "uid://xk4arqqxnv8c"

[node name="PlayerFocused" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_syjl4")
metadata/_custom_type_script = "uid://bct3m2olqchtq"

[node name="PlayerAerial" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_t3wav")
metadata/_custom_type_script = "uid://0ytxwobfs56q"

[node name="PlayerPushing" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_gc466")
metadata/_custom_type_script = "uid://bw7k3m2v2lly7"

[connection signal="timeout" from="CoyoteTime" to="PlayerStateMachine/PlayerGrounded" method="_on_coyote_time_timeout"]
[connection signal="timeout" from="PushTimer" to="PlayerStateMachine/PlayerPushing" method="_on_push_timer_timeout"]

[editable path="Graphics/WolfTraveller"]
[editable path="OrbitCamera"]
[editable path="OrbitCamera/YawPivot/PitchPivot/Camera3D/GrapplingHook"]
